--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "webpack": "^3.10.0"
   },
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "start": "webpack-dev-server"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^2.11.1"
   }
 }
