--- a/package.json
+++ b/package.json
@@ -6,21 +6,25 @@
   "author": "iryna.ivakha <iryna.ivakha@masterofcode.com>",
   "license": "MIT",
   "dependencies": {
-    "css-loader": "^0.28.9",
-    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
-    "gulp": "^3.9.1",
     "html-webpack-plugin": "^2.30.1",
     "jshint": "^2.9.5",
     "jshint-loader": "^0.8.4",
-    "style-loader": "^0.19.1",
-    "webpack": "^3.10.0"
+    "style-loader": "^0.19.1"
   },
   "scripts": {
     "build": "webpack",
     "start": "webpack-dev-server"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.11.1"
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "path": "^0.12.7",
+    "webpack": "^4.28.4",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14"
   }
 }
